Parse most instructions

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,16 @@
+CXX = clang++
 SRC := $(wildcard ./*.cpp)
 OBJ := $(SRC:.cpp=.o)
 
 LDFLAGS =
-CXXFLAGS = -std=c++17 -g
+CXXFLAGS = -std=c++17 -g -Wall
 
 test: $(OBJ)
-	g++ $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS) -fsanitize=address
+
+test_mem: $(OBJ)
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS) -fsanitize=address
+
 
 .PHONY: clean
 clean:
